# MLP_cuda

MLP_CUDA/: CMakeLists.txt
MLP_CUDA/data/: mnist_loader.cpp  mnist_loader.h
MLP_CUDA/src/: cuda_mlp_main.cpp  gpu_layer.h  gpu_mlp.cu  gpu_mlp.cuh  gpu_mlp_errors.cu
MLP_CUDA/src/src/: cuda_mlp_main.cpp  gpu_layer.cu  gpu_mlp.cu  gpu_mlp.h
